New version of json to better match the new elementary actions type