@@ -15,7 +15,6 @@ import com.powsybl.openrao.data.cracapi.networkaction.NetworkAction;
 import com.powsybl.openrao.data.cracapi.networkaction.SwitchPair;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.powsybl.openrao.data.craciojson.JsonSerializationConstants.*;
@@ -28,9 +27,13 @@ public class NetworkActionSerializer extends AbstractJsonSerializer<NetworkActio
         gen.writeStringField(NAME, value.getName());
         gen.writeStringField(OPERATOR, value.getOperator());
         UsageRulesSerializer.serializeUsageRules(value, gen);
-        serializeElementaryActions(value, TOPOLOGICAL_ACTIONS, Arrays.asList(TerminalsConnectionAction.class, SwitchAction.class), gen);
-        serializeElementaryActions(value, PST_SETPOINTS, List.of(PhaseTapChangerTapPositionAction.class), gen);
-        serializeElementaryActions(value, INJECTION_SETPOINTS, Arrays.asList(GeneratorAction.class, LoadAction.class, DanglingLineAction.class, ShuntCompensatorPositionAction.class), gen);
+        serializeElementaryActions(value, TERMINALS_CONNECTION_ACTIONS, List.of(TerminalsConnectionAction.class), gen);
+        serializeElementaryActions(value, SWITCH_ACTIONS, List.of(SwitchAction.class), gen);
+        serializeElementaryActions(value, PHASETAPCHANGER_TAPPOSITION_ACTIONS, List.of(PhaseTapChangerTapPositionAction.class), gen);
+        serializeElementaryActions(value, GENERATOR_ACTIONS, List.of(GeneratorAction.class), gen);
+        serializeElementaryActions(value, LOAD_ACTIONS, List.of(LoadAction.class), gen);
+        serializeElementaryActions(value, DANGLINGLINE_ACTIONS, List.of(DanglingLineAction.class), gen);
+        serializeElementaryActions(value, SHUNTCOMPENSATOR_POSITION_ACTIONS, List.of(ShuntCompensatorPositionAction.class), gen);
         serializeElementaryActions(value, SWITCH_PAIRS, List.of(SwitchPair.class), gen);
         serializeRemedialActionSpeed(value, gen);
         gen.writeEndObject();
